--- a/templates/conference/show.html.twig
+++ b/templates/conference/show.html.twig
@@ -22,7 +22,7 @@
         {% endfor %}
 
         {% if previous >= 0 %}
-            <a href="{{ path('conference', { id: conference.id, $offset: previous }) }}">Previous</a>
+            <a href="{{ path('conference', { id: conference.id, offset: previous }) }}">Previous</a>
         {% endif %}
         {% if next < comments|length %}
             <a href="{{ path('conference', { id: conference.id, offset: next }) }}">Next</a>
