--- a/templates/conference/show.html.twig
+++ b/templates/conference/show.html.twig
@@ -18,7 +18,7 @@
                 {{ comment.createdAt|format_datetime('medium', 'short') }}
             </small>
 
-            <p>{{ comment.test }}</p>
+            <p>{{ comment.text }}</p>
         {% endfor %}
 
         {% if previous >= 0 %}
