Add view property to easy admin

--- a/templates/conference/show.html.twig
+++ b/templates/conference/show.html.twig
@@ -10,7 +10,7 @@
 
         {% for comment in comments %}
             {% if comment.photofilename %}
-                <img src="{{ asset('upload/photos' ~ comment.photofilename) }}" />
+                <img src="{{ asset('uploads/photos/' ~ comment.photofilename) }}" />
             {% endif %}
 
             <h4>{{ comment.author }}</h4>
